--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-:root {
-  --darkblue: #003049;
-  --red: #d62828;
-  --orange: #f77f00;
-  --yellow: #fcbf49;
-  --loghtyellow: #eae2b7;
-}
-
 body {
   font-family: "Rubik", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -20,4 +12,50 @@ label {
 
 label {
   color: white;
+}
+
+.readmore {
+  position: relative;
+  max-height: 50px;
+  overflow: hidden;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+
+  transition: max-height 0.15s ease-out;
+}
+
+.readmore.expand {
+  max-height: 5000px !important;
+  transition: max-height 0.35s ease-in-out;
+}
+
+.readmore-link {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  color: rgba(139, 92, 246);
+  font-weight: bold;
+  font-size: 16px;
+  padding-top: 40px;
+  background-image: linear-gradient(to bottom, transparent, white);
+  cursor: pointer;
+}
+
+.readmore-link.expand {
+  position: relative;
+  background-image: none;
+  padding-top: 10px;
+  height: 20px;
+}
+
+.readmore-link:after {
+  content: "Read more";
+}
+.readmore-link.expand:after {
+  content: "Read less";
 }
