--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,12 @@ label {
 .hidden {
   display: none;
 }
+
+.favouritesBtn {
+  background-color: blueviolet;
+  border-radius: 10px;
+  color: white;
+  padding: 10px;
+  width: 100%;
+  margin: 10px;
+}
