added loading animation to generate button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,3 +84,44 @@ label {
 .favouritesBtn:hover {
   background-color: rgba(30, 58, 138);
 }
+
+/* Button with loading animation */
+
+.button {
+  position: relative;
+}
+
+.button__text {
+  color: white;
+  transition: all 0.2s;
+}
+
+.button--loading .button__text {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.button--loading::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0%;
+  margin: auto;
+  border: 5px solid transparent;
+  border-top-color: white;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+  to {
+    transform: rotate(1turn);
+  }
+}
